--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Rest API for CCF database contact",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon server.js"
   },
   "author": "Bryan Hill",
   "license": "ISC",
@@ -13,7 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.19",
+    "mongoose": "^5.13.8",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "xmlhttprequest": "^1.8.0"
